--- a/css/signin.css
+++ b/css/signin.css
@@ -1,25 +1,73 @@
 body {
-    background-color: white;
-    display: flex;
+    margin: 0;
+    background-color: black;
+    /* display: flex;
     justify-content: center;
+    align-items: center; */
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+/* 메뉴 바 */
+.navbar {
+    display: flex;
+    justify-content: space-around;
     align-items: center;
+    background-color: black;
+}
+
+.navbar__logo {
+    font-size: 26px;
+}
+
+.navbar__logo i {
+    color: red;
+}
+
+.navbar__menu {
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+}
+
+.navbar__menu li {
+    font-size: 20px;
+    padding : 8px 15px;
+}
+
+.navbar__links {
+    list-style: none;
+    padding-left: 0;
+    display: flex;
+}
+
+.navbar__links li {
+    font-size: 14px;
+    padding: 8px 10px;
+}
+
+/* 로그인 폼 */
+.sign-in {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 500px;
+    background-color: ghostwhite;
+    margin: 50px auto 0px;
 }
 
 .form {
     display: flex;
     flex-direction: column;
+    
 }
 
 .header {
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-.sign-in {
-    width: 300px;
-    height: 500px;
-    background-color: ghostwhite;
+    margin: 40px 0px;
 }
 
 .form__input {
@@ -68,4 +116,5 @@ body {
 
 .form__sign-up a{
     text-decoration: none;
+    color: cornflowerblue;
 }
