--- a/css/board.css
+++ b/css/board.css
@@ -47,32 +47,79 @@ body {
 
 /* 자유게시판 */
 .board {
-    margin: auto;
+    margin: 10px auto;
     display: flex;
     flex-direction: column;
-    width: 70%;
-    align-content: center;
-    
+    width: 900px;
+    padding: 20px;
+    border: double 1px #a7a4a4;
+    border-radius: 10px;
+    /* align-content: center; */    
     /* justify-content: center; */
 }
 
 .board__list {
-    border: solid 2px black;
+    
     border-collapse: collapse;
+    background-color: white;
 }
 
-.boarder__header .index {
-    width:10%;
+.board__header {
+    border-top: solid 1px #444444;
+    border-bottom: solid 1px #444444;
 }
 
-.boarder__header .title {
-    width:80%;
+.board__header th {
+    padding : 10px 20px;
+    font-size: 14px;
+    color: black;
+    opacity: 0.8;
 }
 
-.boarder__header .user {
-    width:20%;
+.board__header .index {
+    /* background-color: blue; */
+    width:30px;
 }
 
-.boarder__header .date {
-    width:10%;
+.board__header .title {
+    /* background-color: red; */
+    width:500px;
+}
+
+.board__header .created {
+    /* background-color: green; */
+    width:100px;
+}
+
+.board__body tr {
+    font-size: 14px;
+    border-bottom: double 1px #a7a4a4;
+    opacity: 0.8;
+}
+
+.board__body td {
+    padding: 10px 0;
+}
+
+.board__body .index, .created {
+    text-align: center;
+}
+
+.board__body .title {
+    padding-left:10px;
+}
+
+.board__body a {
+    text-decoration: none;
+    color: black;
+}
+
+.board__button_write {
+    width: 70px;
+    height: 35px;
+    font-size: 16px;
+    color : white;
+    text-decoration: none;
+    background-color: green;
+    border-radius: 5px;
 }
