--- a/css/view_post.css
+++ b/css/view_post.css
@@ -52,10 +52,10 @@ body {
     display: flex;
     flex-direction: column;
     margin: 30px auto;
-    background-color: white;
     /* align-items: center; */
-    width:800px;
-    border: double 1px #444444;
+    width: 800px;
+    border: double 1px #a7a4a4;
+    border-radius: 10px;
 }
 
 .post__header {
