--- a/css/board.css
+++ b/css/board.css
@@ -115,11 +115,36 @@ body {
 }
 
 .board__button_write {
-    width: 70px;
-    height: 35px;
-    font-size: 16px;
-    color : white;
+    width: 80px;
+    height: 30px;
+    font-size: 14px;
     text-decoration: none;
+    color : white;
     background-color: green;
+    opacity: 0.8;
     border-radius: 5px;
+    line-height: 30px;
+    text-align: center;
+}
+
+.board__page {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.board__page a {
+    width:20px;
+    height:20px;
+    text-align: center;
+    font-size: 14px;
+    color: black;
+    text-decoration: none;
+    margin: 0px 3px;
+    padding: 2px;
+}
+
+.board__page a:hover {
+    background-color: #cccbcb;
+    border-radius: 50px;
 }
