--- a/css/view_post.css
+++ b/css/view_post.css
@@ -84,9 +84,19 @@ body {
 }
 
 .post__contents {
-    margin: 0 30px 20px;
+    margin: 0 30px 20px 30px;
     padding: 10px 20px;
-    height: 300px;
+    /* height: 300px; */
+}
+
+.post__contents textarea {
+    width: 100%;
+    height: 350px;
+    border: none;
+    resize: none;
+    font-size: 13px;
+    color: black;
+    opacity: 0.6;
 }
 
 
