Add user input check -  email/password

--- a/css/signup.css
+++ b/css/signup.css
@@ -81,6 +81,14 @@ a {
     margin-left: 30px;
 }
 
+/* .form__test.email-rule {
+    visibility: hidden;
+    color: red;
+    font-size: 10px;
+    margin-top: 3px;
+    margin-bottom: 0;
+} */
+
 .form__text.confirm-password {
     visibility: hidden;
     color: red;
