--- a/css/view_post.css
+++ b/css/view_post.css
@@ -53,7 +53,7 @@ body {
     flex-direction: column;
     margin: 30px auto;
     /* align-items: center; */
-    width: 800px;
+    width: 1000px;
     border: double 1px #a7a4a4;
     border-radius: 10px;
 }
@@ -85,18 +85,8 @@ body {
 
 .post__contents {
     margin: 0 30px 20px 30px;
-    padding: 10px 20px;
+    /* padding: 10px 20px; */
     /* height: 300px; */
-}
-
-.post__contents textarea {
-    width: 100%;
-    height: 350px;
-    border: none;
-    resize: none;
-    font-size: 13px;
-    color: black;
-    opacity: 0.6;
 }
 
 
