--- a/css/write_post.css
+++ b/css/write_post.css
@@ -47,7 +47,7 @@ body {
 
 /* 게시글 작성 */
 .write-post {
-    width: 700px;
+    width: 1000px;
     margin: 10px auto;
     padding:0 30px;
     display: flex;
@@ -56,7 +56,16 @@ body {
     border-radius: 10px;
 }
 
+.write-post h1 {
+    margin-left: 20px;
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    opacity: 0.6;
+}
+
 .write_title {
+    margin : 10px 0 30px;
     padding: 10px 20px;
     border: double 1px #a7a4a4;
     border-radius: 10px;
@@ -66,24 +75,6 @@ body {
 }
 
 .write_title:focus {
-    outline: none;
-    border: solid 2px #444444;
-    border-radius: 5px;
-}
-
-.write_contents {
-    height: 350px;
-    margin-top: 20px;
-    padding: 8px 20px;
-    border: double 1px #a7a4a4;
-    border-radius: 10px;
-    resize: none;
-    font-size: 14px;
-    color: black;
-    opacity: 0.7;
-}
-
-.write_contents:focus {
     outline: none;
     border: solid 2px #444444;
     border-radius: 5px;
