--- a/css/board.css
+++ b/css/board.css
@@ -50,16 +50,15 @@ body {
     margin: 10px auto;
     display: flex;
     flex-direction: column;
-    width: 900px;
+    width: 1000px;
     padding: 20px;
-    border: double 1px #a7a4a4;
+    /* border: double 1px #a7a4a4; */
     border-radius: 10px;
     /* align-content: center; */    
     /* justify-content: center; */
 }
 
 .board__list {
-    
     border-collapse: collapse;
     background-color: white;
 }
@@ -70,8 +69,10 @@ body {
 }
 
 .board__header th {
+    background-color: #e9e9e9;
+    height: 24px;
     padding : 10px 20px;
-    font-size: 14px;
+    font-size: 16px;
     color: black;
     opacity: 0.8;
 }
@@ -87,7 +88,9 @@ body {
 }
 
 .board__body td {
+    height: 50px;
     padding: 10px 0;
+    font-size: 18px;
     white-space: nowrap;
 }
 
