Add page button view

--- a/css/board.css
+++ b/css/board.css
@@ -147,3 +147,9 @@ body {
     background-color: #cccbcb;
     border-radius: 50px;
 }
+
+/* .board__page a.now-page {
+    color: snow;
+    background-color: #6e6e6e;
+    border-radius: 50px;
+} */
