--- a/css/activity.css
+++ b/css/activity.css
@@ -56,7 +56,25 @@ body {
 }
 
 .section__header {
-    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 30px;
+}
+
+.section__header h2 {
+    margin: 0;
+    font-size: 20px;
+}
+
+.section__header a {
+    text-decoration: none;
+    background-color: green;
+    color: honeydew;
+    font-size: 14px;
+    padding: 5px 8px;
+    opacity: 0.9;
+    border-radius: 5px;
 }
 
 .section__list ul {
