--- a/chatting/public/css/open_chat.css
+++ b/chatting/public/css/open_chat.css
@@ -69,8 +69,9 @@ a {
     list-style: none;
 }
 
-.chat__messages li {
-    
+.chat__messages .join-message {
+    color: blue;
+    font-size: 14px;
 }
 
 .chat__input {
