오픈채팅 / 엔터입력으로 채팅보내기, 스크롤 가장 아래(최근 메세지)보기, 글자입력안했을때 전송금지

--- a/chatting/public/css/open_chat.css
+++ b/chatting/public/css/open_chat.css
@@ -97,6 +97,6 @@ a {
     justify-content: center;
 }
 
-.chat__input input {
-    width:500px;
+.chat__input .input__message {
+    width: 500px;
 }
