--- a/css/news.css
+++ b/css/news.css
@@ -1,12 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    overflow-y: hidden; 
-    overflow-x: hidden;
-    background-image: url(images/index.jpg);
 }
 
-a {
+.navbar a {
     text-decoration: none;
     color: white;
 }
@@ -47,4 +44,36 @@ a {
 .navbar__links li {
     font-size: 12px;
     padding: 8px 10px;
+}
+
+/* 뉴스 목록 */
+.news {
+    width: 800px;
+    margin: 20px auto;
+}
+
+.news a {
+    display: flex;
+    color: black;
+    opacity: 0.7;
+    flex-direction: column;
+    text-decoration: none;
+}
+
+.news ul {
+    list-style: none;
+    padding: 0;
+    border: double 1px black;
+
+}
+
+.news li {
+    border-bottom: double 1px black;
+    padding: 20px;
+}
+
+.news .title {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
